keep query data on the backend

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,37 @@
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font 14px Arial, sans-serif
+  background #F7F7F7
+
 a
-  color: #00B7FF
+  color #00B7FF
+
+h1
+  text-align center
+h2
+  margin 0
+  padding-bottom 10px
+  font-weight normal
+  border-bottom 1px solid #DADADA
+h3
+  margin 0
+  font-weight normal
+  font-size 800%
+
+.rtChart
+  min-width 310px
+  height 400px
+  margin 0 auto
+  border 1px solid #DADADA
+  border-radius 5px
+
+.rtCounters
+  text-align center
+  div
+    display inline-block
+    width 16%
+    margin 1%
+    padding 1%
+    min-width 150px
+    border 1px solid #DADADA
+    border-radius 5px
+    background white
