--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,41 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px Arial, sans-serif;
+  background: #f7f7f7;
 }
 a {
   color: #00b7ff;
+}
+h1 {
+  text-align: center;
+}
+h2 {
+  margin: 0;
+  padding-bottom: 10px;
+  font-weight: normal;
+  border-bottom: 1px solid #dadada;
+}
+h3 {
+  margin: 0;
+  font-weight: normal;
+  font-size: 800%;
+}
+.rtChart {
+  min-width: 310px;
+  height: 400px;
+  margin: 0 auto;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+}
+.rtCounters {
+  text-align: center;
+}
+.rtCounters div {
+  display: inline-block;
+  width: 16%;
+  margin: 1%;
+  padding: 1%;
+  min-width: 150px;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+  background: #fff;
 }
