--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -24,7 +24,7 @@ h3
   border 1px solid #DADADA
   border-radius 5px
 
-.rtCounters
+.rtWidgets
   text-align center
   div
     display inline-block
