add traffic distribution by region in profile widget

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@ h3 {
 .rtWidgets {
   text-align: center;
 }
-.rtWidgets div {
+.rtWidgets>div {
   display: inline-block;
   width: 16%;
   margin: 1%;
