--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,12 @@ block content
   #rtChart.rtChart
 
   .alert
-  .rtCounters
+  .rtWidgets
 
   script.
+    var INTERVAL = !{interval || 60*1000};
     var chartSeries = !{JSON.stringify(chartSeries)};
   script(src="javascripts/jquery.min.js")
   script(src="javascripts/highcharts.js")
+  script(src="javascripts/widget.js")
   script(src="javascripts/dashboard.js")
